--- a/server/.prettierrc
+++ b/server/.prettierrc
@@ -3,9 +3,6 @@
   "singleQuote": false,
   "trailingComma": "es5",
   "tabWidth": 2,
-  "plugins": [
-    "prettier-plugin-tailwindcss",
-    "prettier-plugin-organize-imports"
-  ],
+  "plugins": ["prettier-plugin-organize-imports"],
   "organizeImportsSkipDestructiveCodeActions": false
 }
