--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -31,6 +31,7 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@repo/db": "*",
     "@repo/typescript-config": "*",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.16",
