--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -27,7 +27,10 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@types/dotenv": "^8.2.3",
     "cors": "^2.8.5",
-    "socket.io": "^4.8.1"
+    "dotenv": "^17.2.0",
+    "socket.io": "^4.8.1",
+    "zod": "^4.0.5"
   }
 }
