fix db studio script

--- a/turbo.json
+++ b/turbo.json
@@ -30,6 +30,9 @@
     "db:seed": {
       "cache": false
     },
+    "db:studio": {
+      "cache": false
+    },
     "generate": {
       "dependsOn": ["^generate"],
       "cache": false
