--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -9,12 +9,12 @@
     "db:migrate:dev": "prisma migrate dev",
     "db:push": "prisma db push",
     "db:seed": "tsx src/seed.ts",
+    "db:studio": "prisma studio",
     "dev": "tsup src/* --watch",
     "format": "prisma format",
     "generate": "prisma generate",
     "prebuild": "npm run generate",
-    "predev": "npm run generate",
-    "studio": "prisma studio"
+    "predev": "npm run generate"
   },
   "dependencies": {
     "@prisma/client": "latest"
