--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.30.1",
     "@repo/db": "*",
+    "@repo/types": "*",
     "@types/dotenv": "^8.2.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
