--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -34,12 +34,14 @@
   },
   "devDependencies": {
     "@repo/db": "*",
+    "@repo/eslint-config": "^0.0.0",
     "@repo/typescript-config": "*",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint": "^9.31.0",
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.14",
