--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -7,12 +7,14 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
+    "lint": "eslint 'src/**/*.ts'",
     "check-types": "tsc --noEmit",
     "format": "prettier --write 'src/**/*.ts'"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@repo/eslint-config": "^0.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.13",
