--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -11,6 +11,7 @@
     "db:seed": "tsx src/seed.ts",
     "db:studio": "prisma studio",
     "dev": "tsup src/* --watch",
+    "lint": "eslint 'src/**/*.ts'",
     "format": "prisma format",
     "generate": "prisma generate",
     "prebuild": "npm run generate",
@@ -20,7 +21,9 @@
     "@prisma/client": "latest"
   },
   "devDependencies": {
+    "@repo/eslint-config": "^0.0.0",
     "@repo/typescript-config": "*",
+    "eslint": "^9.31.0",
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prisma": "latest",
