--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -9,10 +9,13 @@
     "./*": "./src/*.ts"
   },
   "scripts": {
+    "lint": "eslint 'src/**/*.ts'",
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
+    "@repo/eslint-config": "^0.0.0",
     "@repo/typescript-config": "*",
+    "eslint": "^9.31.0",
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.1.0",
     "typescript": "5.5.4"
