halfway through pinecone-handler

--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "@pinecone-database/pinecone": "^6.1.1"
+  }
 }
