--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,9 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # Dependencies
 node_modules
-.pnp
-.pnp.js
 
 # Local env files
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Testing
-coverage
 
 # Turbo
 .turbo
@@ -27,19 +17,18 @@ out/
 build
 dist
 
-
 # Debug
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
 # Misc
 .DS_Store
 *.pem
 
+# Prompt research stuff (Ishaan)
 prompts/
 
-# python virtual environments
+# Python virtual environments
 .venv/
 
+# Indexing stuff (Rajan)
 .shadow/
