--- a/packages/db/.env.template
+++ b/packages/db/.env.template
@@ -1,2 +1,2 @@
-DATABASE_URL="postgresql://neondb_owner:npg_eZBxrCKvNk57@ep-long-wave-afu7k6a8-pooler.c-2.us-west-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
-DIRECT_URL="postgresql://neondb_owner:npg_eZBxrCKvNk57@ep-long-wave-afu7k6a8.c-2.us-west-2.aws.neon.tech/neondb"
+DATABASE_URL=
+DIRECT_URL=
