api + tests started

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -11,4 +11,5 @@ FRONTEND_URL="http://localhost:3000"
 GITHUB_CLIENT_ID="your-github-client-id"
 GITHUB_CLIENT_SECRET="your-github-client-secret"
 
+PINECONE_API_KEY="<API_KEY>"
 # Other existing environment variables...
