--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -9,7 +9,9 @@
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
     "lint": "eslint 'src/**/*.ts'",
     "check-types": "tsc --noEmit",
-    "format": "prettier --write 'src/**/*.ts'"
+    "format": "prettier --write 'src/**/*.ts'",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +25,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "socket.io": "^4.8.1",
+    "tree-sitter": "^0.22.4",
+    "tree-sitter-javascript": "^0.23.1",
+    "tree-sitter-python": "^0.23.6",
     "zod": "^3.23.8"
   },
   "devDependencies": {
