--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -24,6 +24,7 @@
     "ai": "^4.3.19",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
+    "node-fetch": "^3.3.2",
     "socket.io": "^4.8.1",
     "tree-sitter": "^0.22.4",
     "tree-sitter-javascript": "^0.23.1",
