--- a/package.json
+++ b/package.json
@@ -32,13 +32,17 @@
     "packages/*"
   ],
   "dependencies": {
+    "@octokit/rest": "^22.0.0",
     "@pinecone-database/pinecone": "^6.1.1",
     "@types/jest": "^30.0.0",
     "@types/supertest": "^6.0.3",
     "@xenova/transformers": "^2.17.2",
+    "install": "^0.13.0",
     "jest": "^30.0.4",
+    "npm": "^11.4.2",
     "supertest": "^7.1.3",
     "tree-sitter": "^0.25.0",
-    "tree-sitter-python": "^0.23.6"
+    "tree-sitter-python": "^0.23.6",
+    "tsconfig-paths": "^4.2.0"
   }
 }
