removed stale code

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -12,4 +12,5 @@ GITHUB_CLIENT_ID="your-github-client-id"
 GITHUB_CLIENT_SECRET="your-github-client-secret"
 
 PINECONE_API_KEY="<API_KEY>"
+GITHUB_API_KEY="<API_KEY>"
 # Other existing environment variables...
