--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -46,6 +46,16 @@
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.1.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "@pinecone-database/pinecone": "^6.1.1",
+    "@types/jest": "^30.0.0",
+    "@types/supertest": "^6.0.3",
+    "@xenova/transformers": "^2.17.2",
+    "jest": "^30.0.4",
+    "supertest": "^7.1.3",
+    "tree-sitter": "^0.25.0",
+    "tree-sitter-python": "^0.23.6",
+    "tsconfig-paths": "^4.2.0",
+    "@octokit/rest": "^22.0.0"
   }
 }
