--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -26,6 +26,7 @@
     "ai": "^4.3.19",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
+    "nanoid": "^5.1.5",
     "node-fetch": "^3.3.2",
     "socket.io": "^4.8.1",
     "tree-sitter": "^0.22.4",
@@ -34,28 +35,28 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@octokit/rest": "^22.0.0",
+    "@pinecone-database/pinecone": "^6.1.1",
     "@repo/eslint-config": "^0.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.0.13",
+    "@types/supertest": "^6.0.3",
+    "@xenova/transformers": "^2.17.2",
     "eslint": "^9.31.0",
     "express": "^5.1.0",
     "install": "^0.13.0",
+    "jest": "^30.0.4",
     "nodemon": "^3.1.10",
     "npm": "^11.4.2",
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.1.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3",
-    "@pinecone-database/pinecone": "^6.1.1",
-    "@types/jest": "^30.0.0",
-    "@types/supertest": "^6.0.3",
-    "@xenova/transformers": "^2.17.2",
-    "jest": "^30.0.4",
     "supertest": "^7.1.3",
     "tree-sitter": "^0.25.0",
     "tree-sitter-python": "^0.23.6",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "@octokit/rest": "^22.0.0"
+    "typescript": "^5.8.3"
   }
 }
