fix env template

--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -1,8 +1,15 @@
-ANTHROPIC_API_KEY=
-OPENAI_API_KEY=
-
-WORKSPACE_DIR=
-DEBUG=
-
+# Database
 DATABASE_URL=
 DIRECT_URL=
+
+BETTER_AUTH_SECRET=
+BETTER_AUTH_URL=
+
+FRONTEND_URL=
+
+
+PINECONE_API_KEY=
+PINECONE_INDEX_NAME=
+ANTHROPIC_API_KEY=
+OPENAI_API_KEY=
+GITHUB_API_KEY=
