update env templates

--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -1,15 +1,13 @@
-# Database
 DATABASE_URL=
-DIRECT_URL=
-
-BETTER_AUTH_SECRET=
-BETTER_AUTH_URL=
-
-FRONTEND_URL=
-
 
 PINECONE_API_KEY=
 PINECONE_INDEX_NAME=
 ANTHROPIC_API_KEY=
 OPENAI_API_KEY=
 GITHUB_API_KEY=
+
+# Detailed logging for local agent:
+DEBUG=true
+
+# Workspace directory for local agent:
+WORKSPACE_DIR=
