--- a/apps/frontend/.env.template
+++ b/apps/frontend/.env.template
@@ -1,6 +1,13 @@
-NEXT_PUBLIC_API_URL=localhost:4000
-NEXT_PUBLIC_SOCKET_URL=localhost:4001
+NEXT_PUBLIC_API_URL="localhost:4000"
+NEXT_PUBLIC_SOCKET_URL="localhost:4001"
 
 BETTER_AUTH_SECRET=
+
+GITHUB_APP_ID=
+GITHUB_APP_SLUG=
+GITHUB_PRIVATE_KEY=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
+
+DATABASE_URL="postgres://postgres:@127.0.0.1:5432/shadow_dev"
+
