working github setup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "files.exclude": {
-    "apps/server/dist/**": true
+    "apps/server/dist/**": true,
+    "apps/frontend/.next/**": true
   }
 }
