--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^17.2.0",
     "nanoid": "^5.1.5",
     "node-fetch": "^3.3.2",
+    "openai": "^5.10.1",
     "socket.io": "^4.8.1",
     "tree-sitter": "^0.22.4",
     "tree-sitter-javascript": "^0.23.1",
