--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -25,6 +25,7 @@
     "@types/dotenv": "^8.2.3",
     "ai": "^4.3.19",
     "cors": "^2.8.5",
+    "diff": "^8.0.2",
     "dotenv": "^17.2.0",
     "nanoid": "^5.1.5",
     "node-fetch": "^3.3.2",
