--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
     "db:migrate:deploy": "turbo run db:migrate:deploy",
     "db:migrate:dev": "turbo run db:migrate:dev",
     "db:push": "turbo run db:push",
-    "db:seed": "turbo run db:seed",
     "db:studio": "turbo run db:studio",
     "generate": "turbo run generate"
   },
   "prisma": {
-    "schema": "packages/db/prisma/schema.prisma",
-    "seed": "tsx packages/db/src/seed.ts"
+    "schema": "packages/db/prisma/schema.prisma"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
