update env template to support github token refresh

--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -4,7 +4,10 @@ PINECONE_API_KEY=
 PINECONE_INDEX_NAME=
 ANTHROPIC_API_KEY=
 OPENAI_API_KEY=
+
 GITHUB_API_KEY=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
 
 # Detailed logging for local agent:
 DEBUG=true
