--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "db:migrate:dev": "turbo run db:migrate:dev",
     "db:push": "turbo run db:push",
     "db:studio": "turbo run db:studio",
-    "generate": "turbo run generate"
+    "generate": "turbo run generate",
+    "docker:build": "docker-compose build",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f",
+    "docker:server": "docker build -f apps/server/Dockerfile -t shadow-server .",
+    "docker:sidecar": "docker build -f apps/sidecar/Dockerfile -t shadow-sidecar ."
   },
   "prisma": {
     "schema": "packages/db/prisma/schema.prisma"
