--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -13,6 +13,7 @@
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
+    "@repo/db": "*",
     "@repo/eslint-config": "^0.0.0",
     "@repo/typescript-config": "*",
     "eslint": "^9.31.0",
