efs and terminal buffer

--- a/apps/server/src/execution/k8s/storage.yaml
+++ b/apps/server/src/execution/k8s/storage.yaml
@@ -1,4 +1,24 @@
-# Storage class for agent workspaces (adjust for your cluster)
+# EFS Storage Class for persistent workspace storage
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: efs-sc
+  labels:
+    app: shadow
+    component: storage
+provisioner: efs.csi.aws.com
+parameters:
+  provisioningMode: efs-ap
+  fileSystemId: fs-REPLACE_WITH_EFS_ID  # Replace with actual EFS filesystem ID
+  directoryPerms: "0755"
+  gidRangeStart: "1000"
+  gidRangeEnd: "2000"
+  basePath: "/shadow-workspaces"
+reclaimPolicy: Retain
+allowVolumeExpansion: false  # EFS doesn't support volume expansion
+volumeBindingMode: Immediate
+---
+# Fallback storage class for local development (using gp2)
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
@@ -6,12 +26,10 @@ metadata:
   labels:
     app: shadow
     component: storage
-# Adjust provisioner and parameters for your cluster
-provisioner: kubernetes.io/gce-pd  # Change to your storage provisioner
+provisioner: kubernetes.io/aws-ebs
 parameters:
-  type: pd-ssd
-  replication-type: none
-  zones: us-central1-a,us-central1-b
+  type: gp2
+  encrypted: "true"
 reclaimPolicy: Delete
 allowVolumeExpansion: true
 volumeBindingMode: WaitForFirstConsumer
@@ -35,8 +53,8 @@ spec:
     limits.memory: 100Gi
     
     # Storage limits
-    persistentvolumeclaims: "0"  # Using emptyDir only
-    requests.storage: "0"
+    persistentvolumeclaims: "100"  # Allow PVCs for EFS storage
+    requests.storage: "1000Gi"      # EFS storage quota
     
     # Service limits
     services: "50"
@@ -81,3 +99,109 @@ spec:
       storage: 20Gi
     min:
       storage: 1Gi
+---
+# EFS CSI Driver Service Account (required for EFS access)
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: efs-csi-controller-sa
+  namespace: kube-system
+  labels:
+    app: shadow
+    component: efs-csi
+  annotations:
+    eks.amazonaws.com/role-arn: arn:aws:iam::ACCOUNT_ID:role/AmazonEKS_EFS_CSI_DriverRole  # Replace with actual role ARN
+---
+# Sample EFS PersistentVolume (optional - for static provisioning)
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: shadow-efs-pv
+  labels:
+    app: shadow
+    component: storage-efs
+spec:
+  capacity:
+    storage: 1000Gi  # EFS is unlimited, this is just a placeholder
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: efs-sc
+  csi:
+    driver: efs.csi.aws.com
+    volumeHandle: fs-REPLACE_WITH_EFS_ID  # Replace with actual EFS filesystem ID
+---
+# Instructions ConfigMap for EFS setup
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: shadow-efs-setup-instructions
+  namespace: shadow-agents
+  labels:
+    app: shadow
+    component: setup-docs
+data:
+  setup.md: |
+    # EFS Setup Instructions
+    
+    ## Prerequisites
+    1. Create EFS filesystem in AWS Console or CLI
+    2. Create security group allowing NFS access (port 2049) from EKS nodes
+    3. Create mount targets in all EKS subnet availability zones
+    4. Install EFS CSI driver on EKS cluster
+    
+    ## EFS CSI Driver Installation
+    ```bash
+    # Install EFS CSI driver using EKS add-on (recommended)
+    aws eks create-addon \
+      --cluster-name shadow-cluster \
+      --addon-name aws-efs-csi-driver \
+      --service-account-role-arn arn:aws:iam::ACCOUNT_ID:role/AmazonEKS_EFS_CSI_DriverRole
+    
+    # OR install using kubectl
+    kubectl apply -k "github.com/kubernetes-sigs/aws-efs-csi-driver/deploy/kubernetes/overlays/stable/?ref=release-1.5"
+    ```
+    
+    ## Configuration Steps
+    1. Replace fs-REPLACE_WITH_EFS_ID with actual EFS filesystem ID in this file
+    2. Replace ACCOUNT_ID with your AWS account ID
+    3. Create IAM role AmazonEKS_EFS_CSI_DriverRole with EFS permissions
+    4. Apply this storage configuration: kubectl apply -f storage.yaml
+    
+    ## Environment Variables
+    Set these in your server environment:
+    - EFS_VOLUME_ID=fs-REPLACE_WITH_EFS_ID
+    
+    ## Testing
+    Create a test pod to verify EFS mounting:
+    ```yaml
+    apiVersion: v1
+    kind: Pod
+    metadata:
+      name: efs-test
+    spec:
+      containers:
+      - name: test
+        image: busybox
+        command: ["sleep", "3600"]
+        volumeMounts:
+        - name: efs-storage
+          mountPath: /test-efs
+      volumes:
+      - name: efs-storage
+        persistentVolumeClaim:
+          claimName: efs-test-pvc
+    ---
+    apiVersion: v1
+    kind: PersistentVolumeClaim
+    metadata:
+      name: efs-test-pvc
+    spec:
+      accessModes:
+        - ReadWriteMany
+      storageClassName: efs-sc
+      resources:
+        requests:
+          storage: 5Gi
+    ```
