--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "db:migrate:deploy": "turbo run db:migrate:deploy",
     "db:migrate:dev": "turbo run db:migrate:dev",
     "db:push": "turbo run db:push",
+    "db:push:reset": "turbo run db:push:reset",
     "db:studio": "turbo run db:studio",
     "generate": "turbo run generate",
     "docker:build": "docker-compose build",
