--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "lint": "next lint",
     "check-types": "tsc --noEmit",
-    "format": "prettier --write . && prettier --write --plugin=prettier-plugin-organize-imports ."
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
@@ -58,8 +58,6 @@
     "@types/react-dom": "^19",
     "eslint": "^9.31.0",
     "prettier": "^3.6.2",
-    "prettier-plugin-organize-imports": "^4.1.0",
-    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
