--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -36,6 +36,7 @@
     "tree-sitter": "^0.22.4",
     "tree-sitter-javascript": "^0.23.1",
     "tree-sitter-python": "^0.23.6",
+    "tree-sitter-typescript": "^0.23.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
