--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -23,6 +23,7 @@
     "@ai-sdk/anthropic": "^1.2.12",
     "@ai-sdk/openai": "^1.3.23",
     "@repo/db": "*",
+    "@repo/security": "*",
     "@repo/types": "*",
     "@types/dotenv": "^8.2.3",
     "ai": "^4.3.19",
