--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -29,6 +29,7 @@
     "cors": "^2.8.5",
     "diff": "^8.0.2",
     "dotenv": "^17.2.0",
+    "fast-glob": "^3.3.3",
     "nanoid": "^5.1.5",
     "node-fetch": "^3.3.2",
     "openai": "^5.10.1",
