--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -34,8 +34,16 @@
     "openai": "^5.10.1",
     "socket.io": "^4.8.1",
     "tree-sitter": "^0.22.4",
+    "tree-sitter-c": "^0.24.1",
+    "tree-sitter-cpp": "^0.23.4",
+    "tree-sitter-go": "^0.23.4",
+    "tree-sitter-java": "^0.23.5",
     "tree-sitter-javascript": "^0.23.1",
+    "tree-sitter-php": "^0.23.12",
     "tree-sitter-python": "^0.23.6",
+    "tree-sitter-ruby": "^0.23.1",
+    "tree-sitter-rust": "^0.24.0",
+    "tree-sitter-typescript": "^0.23.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
