use semantic search flag impleneted

--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -11,6 +11,6 @@ GITHUB_CLIENT_SECRET=
 
 # Detailed logging for local agent:
 DEBUG=true
-
+USE_SEMANTIC_SEARCH=true
 # Workspace directory for local agent:
 WORKSPACE_DIR=
