--- a/apps/frontend/.env.template
+++ b/apps/frontend/.env.template
@@ -3,6 +3,8 @@ NEXT_PUBLIC_SOCKET_URL="localhost:4001"
 
 BETTER_AUTH_SECRET=
 
+USE_SEMANTIC_SEARCH=true
+
 GITHUB_APP_ID=
 GITHUB_APP_SLUG=
 GITHUB_PRIVATE_KEY=
