--- a/apps/sidecar/package.json
+++ b/apps/sidecar/package.json
@@ -23,6 +23,7 @@
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
     "helmet": "^8.0.0",
+    "socket.io-client": "^4.7.2",
     "winston": "^3.17.0",
     "zod": "^3.24.1"
   },
