--- a/apps/server/src/execution/production-config.example.env
+++ b/apps/server/src/execution/production-config.example.env
@@ -1,15 +1,14 @@
-# Production Configuration Template for Execution Abstraction Layer
+# Production Configuration Template for Shadow Firecracker
 # Copy this file to .env and customize for your deployment
 
 # =============================================================================
 # EXECUTION MODE CONFIGURATION
 # =============================================================================
 
-# Agent execution mode: local, remote, or mock
+# Agent execution mode: local or firecracker
 # - local: Direct filesystem operations (default for development)
-# - remote: Distributed execution via Kubernetes pods (production)
-# - mock: Simulated remote behavior (testing only)
-AGENT_MODE=remote
+# - firecracker: Hardware-isolated VM execution (production)
+AGENT_MODE=firecracker
 
 # =============================================================================
 # LOCAL MODE CONFIGURATION
@@ -19,49 +18,70 @@ AGENT_MODE=remote
 WORKSPACE_DIR=/var/lib/shadow/workspaces
 
 # =============================================================================
-# REMOTE MODE CONFIGURATION (Kubernetes)
+# FIRECRACKER MODE CONFIGURATION
 # =============================================================================
+
+# Enable Firecracker VM mode
+FIRECRACKER_ENABLED=true
+
+# VM Image configuration
+VM_IMAGE_REGISTRY=your-ecr-registry.amazonaws.com
+VM_IMAGE_TAG=latest
+FIRECRACKER_KERNEL_PATH=/var/lib/vm-images/vmlinux
+
+# VM Resource configuration
+VM_CPU_COUNT=1
+VM_MEMORY_SIZE_MB=1024
+VM_CPU_LIMIT=1000m
+VM_MEMORY_LIMIT=2Gi
+VM_STORAGE_LIMIT=10Gi
 
 # Kubernetes cluster configuration
-KUBERNETES_NAMESPACE=shadow-agents
+KUBERNETES_NAMESPACE=shadow
 K8S_SERVICE_ACCOUNT_TOKEN=your-service-account-token-here
 
-# Sidecar service configuration
-SIDECAR_IMAGE=your-registry.com/shadow-sidecar:v1.0.0
-SIDECAR_PORT=8080
-SIDECAR_HEALTH_PATH=/health
-
-# Resource limits for agent pods
-REMOTE_CPU_LIMIT=2000m
-REMOTE_MEMORY_LIMIT=4Gi
+# Storage configuration
+EFS_VOLUME_ID=fs-your-efs-volume-id
 
 # =============================================================================
-# ERROR HANDLING & RESILIENCE CONFIGURATION
+# VM IMAGE BUILD CONFIGURATION
 # =============================================================================
 
-# HTTP request timeout for remote operations (milliseconds)
-REMOTE_REQUEST_TIMEOUT=30000
+# Base image settings
+UBUNTU_VERSION=22.04
+NODE_VERSION=20
+PYTHON_VERSION=3.11
+KERNEL_VERSION=5.15.0-91-generic
 
-# Retry configuration
-REMOTE_MAX_RETRIES=3
-REMOTE_RETRY_DELAY=1000
-
-# Circuit breaker configuration
-REMOTE_CIRCUIT_BREAKER_THRESHOLD=5
-REMOTE_CIRCUIT_BREAKER_TIMEOUT=60000
+# Image optimization
+VM_IMAGE_SIZE=2G
+ROOTFS_COMPRESSION=gzip
+KERNEL_COMPRESSION=gzip
 
 # =============================================================================
-# MONITORING & LOGGING CONFIGURATION
+# KUBERNETES CONFIGURATION
 # =============================================================================
 
-# Log levels: debug, info, warn, error
-LOG_LEVEL=info
+# Node requirements
+FIRECRACKER_NODE_SELECTOR=firecracker=true
+KVM_DEVICE_PATH=/dev/kvm
 
-# Enable detailed operation logging
-ENABLE_OPERATION_LOGGING=true
+# Pod configuration
+POD_RESTART_POLICY=Never
+POD_SERVICE_ACCOUNT=shadow-firecracker-vm-sa
+RUNTIME_CLASS=firecracker
 
-# Enable performance metrics
-ENABLE_METRICS=true
+# Security context
+PRIVILEGED_CONTAINERS=true
+REQUIRED_CAPABILITIES=SYS_ADMIN,NET_ADMIN
+
+# Storage classes
+WORKSPACE_STORAGE_CLASS=gp3
+VM_STORAGE_CLASS=fast-nvme
+
+# Network configuration
+CLUSTER_DNS_SUFFIX=cluster.local
+VM_NETWORK_POLICY=shadow-vm-isolation
 
 # =============================================================================
 # SECURITY CONFIGURATION
@@ -72,9 +92,53 @@ GITHUB_TOKEN=your-github-token-here
 GITHUB_APP_ID=your-github-app-id
 GITHUB_APP_PRIVATE_KEY=your-github-app-private-key
 
-# Security headers for remote API calls
-REMOTE_API_TIMEOUT=30000
-REMOTE_API_USER_AGENT=Shadow-Agent/1.0.0
+# VM Security settings
+JAILER_UID=1000
+JAILER_GID=1000
+CHROOT_BASE_DIR=/srv/jailer
+
+# Resource limits
+VM_FILE_SIZE_LIMIT=134217728  # 128MB
+VM_OPEN_FILES_LIMIT=1024
+VM_PROCESS_LIMIT=100
+
+# =============================================================================
+# MONITORING & LOGGING CONFIGURATION
+# =============================================================================
+
+# Log levels: debug, info, warn, error
+LOG_LEVEL=info
+
+# Enable detailed VM operation logging
+ENABLE_VM_LOGGING=true
+ENABLE_CONSOLE_LOGGING=true
+
+# Enable performance metrics
+ENABLE_METRICS=true
+ENABLE_VM_METRICS=true
+
+# Health check configuration
+HEALTH_CHECK_INTERVAL=30000
+VM_HEALTH_CHECK_TIMEOUT=5000
+
+# =============================================================================
+# PERFORMANCE TUNING
+# =============================================================================
+
+# VM boot configuration
+VM_BOOT_TIMEOUT=120000        # 2 minutes
+SIDECAR_READY_TIMEOUT=60000   # 1 minute
+REPOSITORY_CLONE_TIMEOUT=300000  # 5 minutes
+
+# Resource monitoring
+MAX_CONCURRENT_VMS=10
+MAX_VM_UPTIME_HOURS=24
+VM_CLEANUP_INTERVAL=3600000   # 1 hour
+
+# Terminal buffer configuration
+TERMINAL_BUFFER_SIZE=10000
+TERMINAL_BUFFER_MEMORY_MB=50
+TERMINAL_FLUSH_INTERVAL=60000
 
 # =============================================================================
 # PRODUCTION DEPLOYMENT VARIABLES
@@ -84,50 +148,54 @@ REMOTE_API_USER_AGENT=Shadow-Agent/1.0.0
 NODE_ENV=production
 DEPLOYMENT_ENV=production
 
-# Health check configuration
-HEALTH_CHECK_INTERVAL=30000
-WORKSPACE_CLEANUP_INTERVAL=3600000
+# AWS Configuration (for bare metal instances)
+AWS_REGION=us-west-2
+EC2_INSTANCE_TYPES=c5.metal,m6i.metal
 
-# Resource monitoring
-MAX_CONCURRENT_TASKS=10
-MAX_WORKSPACE_SIZE=10737418240  # 10GB in bytes
-WORKSPACE_RETENTION_HOURS=24
-
-# =============================================================================
-# KUBERNETES SPECIFIC CONFIGURATION
-# =============================================================================
-
-# Pod specification defaults
-POD_RESTART_POLICY=Never
-POD_SERVICE_ACCOUNT=shadow-agent-sa
-
-# Storage configuration
-WORKSPACE_STORAGE_CLASS=fast-ssd
-WORKSPACE_VOLUME_SIZE=10Gi
-
-# Network configuration
-CLUSTER_DNS_SUFFIX=cluster.local
-INTERNAL_NETWORK_POLICY=shadow-network-policy
-
-# Image pull configuration
+# Container registry configuration
 IMAGE_PULL_POLICY=Always
-IMAGE_PULL_SECRETS=your-registry-secret
+IMAGE_PULL_SECRETS=ecr-registry-secret
+
+# =============================================================================
+# ERROR HANDLING & RESILIENCE
+# =============================================================================
+
+# VM operation timeouts
+VM_OPERATION_TIMEOUT=30000
+VM_CONSOLE_TIMEOUT=10000
+
+# Retry configuration
+VM_MAX_RETRIES=3
+VM_RETRY_DELAY=1000
+
+# Circuit breaker configuration
+VM_CIRCUIT_BREAKER_THRESHOLD=5
+VM_CIRCUIT_BREAKER_TIMEOUT=60000
+
+# Failure handling
+AUTO_RESTART_FAILED_VMS=true
+MAX_VM_RESTART_ATTEMPTS=3
 
 # =============================================================================
 # OPTIONAL: ADVANCED CONFIGURATION
 # =============================================================================
 
-# Custom sidecar endpoints (if different from defaults)
-# SIDECAR_FILES_ENDPOINT=/api/files
-# SIDECAR_COMMAND_ENDPOINT=/api/execute
-# SIDECAR_SEARCH_ENDPOINT=/api/search
-
-# Performance tuning
-# WORKSPACE_PREPARATION_TIMEOUT=300000  # 5 minutes
-# POD_READY_TIMEOUT=120000              # 2 minutes
-# COMMAND_EXECUTION_TIMEOUT=600000      # 10 minutes
+# Custom VM configuration
+# VM_CUSTOM_KERNEL_ARGS="console=ttyS0 reboot=k panic=1 pci=off custom=value"
+# VM_CUSTOM_NETWORK_CONFIG=true
+# VM_ENABLE_VSOCK=true
 
 # Development overrides (remove in production)
-# SKIP_TLS_VERIFICATION=false
-# ENABLE_DEBUG_LOGGING=false
-# MOCK_FAILURE_RATE=0.0
+# SKIP_VM_ISOLATION=false
+# ENABLE_DEBUG_CONSOLE=false
+# MOCK_VM_FAILURES=false
+
+# LSP Server configuration
+# TYPESCRIPT_LSP_ENABLED=true
+# PYTHON_LSP_ENABLED=true
+# LSP_MEMORY_LIMIT=512MB
+
+# Git configuration
+# GIT_COMMIT_AUTHOR="Shadow Agent <shadow@shadowcoding.ai>"
+# GIT_AUTO_PUSH=true
+# GIT_SHADOW_BRANCH_PREFIX=shadow/task-
