--- a/packages/command-security/package.json
+++ b/packages/command-security/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "exports": {
+    ".": "./src/index.ts",
+    "./*": "./src/*.ts"
+  },
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
+    "lint": "eslint 'src/**/*.ts'",
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
