--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -46,7 +46,8 @@
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
-    "use-stick-to-bottom": "^1.1.1"
+    "use-stick-to-bottom": "^1.1.1",
+    "zod": "^4.0.10"
   },
   "devDependencies": {
     "@repo/db": "*",
