--- a/apps/sidecar/tsconfig.docker.json
+++ b/apps/sidecar/tsconfig.docker.json
@@ -7,7 +7,7 @@
     "target": "ES2022",
     "module": "NodeNext",
     "moduleDetection": "force",
-    "moduleResolution": "NodeNext",
+    "moduleResolution": "bundler",
     "declaration": true,
     "declarationMap": true,
     "esModuleInterop": true,
