--- a/apps/sidecar/tsconfig.json
+++ b/apps/sidecar/tsconfig.json
@@ -6,7 +6,7 @@
     "lib": ["ES2022"],
     "target": "ES2022",
     "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "moduleResolution": "bundler",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
