--- a/apps/sidecar/package.json
+++ b/apps/sidecar/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@repo/command-security": "*",
+    "@repo/types": "*",
+    "@repo/db": "*",
     "compression": "^1.7.5",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
