--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.12",
     "@ai-sdk/openai": "^1.3.23",
+    "@kubernetes/client-node": "^1.0.0",
     "@repo/db": "*",
     "@repo/command-security": "*",
     "@repo/types": "*",
