fix env templates

--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -5,12 +5,11 @@ PINECONE_INDEX_NAME=
 ANTHROPIC_API_KEY=
 OPENAI_API_KEY=
 
-GITHUB_API_KEY=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 
-# Detailed logging for local agent:
-DEBUG=true
-USE_SEMANTIC_SEARCH=true
+
+ENABLE_SEMANTIC_SEARCH=
+
 # Workspace directory for local agent:
 WORKSPACE_DIR=
