--- a/apps/frontend/.env.template
+++ b/apps/frontend/.env.template
@@ -1,5 +1,5 @@
-NEXT_PUBLIC_API_URL="localhost:4000"
-NEXT_PUBLIC_SOCKET_URL="localhost:4001"
+NEXT_PUBLIC_API_URL="http://localhost:4000"
+NEXT_PUBLIC_SOCKET_URL="http://localhost:4001"
 
 BETTER_AUTH_SECRET=
 
