--- a/apps/server/src/execution/k8s/firecracker-runtime-class.yaml
+++ b/apps/server/src/execution/k8s/firecracker-runtime-class.yaml
@@ -2,14 +2,15 @@ apiVersion: node.k8s.io/v1
 kind: RuntimeClass
 metadata:
   name: firecracker
-  namespace: shadow
 handler: firecracker
 scheduling:
-  nodeClassification:
+  nodeSelector:
     firecracker: "true"
   tolerations:
-  - key: firecracker.shadow.io/vm-node
-    operator: Exists
+  - key: firecracker.shadow.ai/dedicated
+    operator: Equal
+    value: "true"
+    effect: NoSchedule
   - key: node.kubernetes.io/not-ready
     operator: Exists
     effect: NoExecute
@@ -20,7 +21,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: firecracker-vm-config
-  namespace: shadow
+  namespace: shadow-agents
 data:
   vm-config-template.json: |
     {
@@ -75,7 +76,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: firecracker-jailer-config
-  namespace: shadow
+  namespace: shadow-agents
 data:
   jailer-config.sh: |
     #!/bin/bash
