update vm image action ordering

--- a/.github/workflows/build-vm-images.yml
+++ b/.github/workflows/build-vm-images.yml
@@ -46,12 +46,15 @@ jobs:
       - name: Install dependencies
         run: |
           npm ci
-          cd apps/sidecar && npm ci
+
+      - name: Build workspace packages
+        run: |
+          npm run generate
+          turbo run build --filter="@repo/*"
 
       - name: Build sidecar service
         run: |
-          cd apps/sidecar
-          npm run build
+          turbo run build --filter=sidecar
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
