--- a/.github/workflows/build-vm-images.yml
+++ b/.github/workflows/build-vm-images.yml
@@ -47,6 +47,9 @@ jobs:
         run: |
           npm ci
 
+      - name: Install Turbo globally
+        run: npm install -g turbo
+
       - name: Build workspace packages
         run: |
           npm run generate
