--- a/.github/workflows/build-vm-images.yml
+++ b/.github/workflows/build-vm-images.yml
@@ -236,6 +236,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-vm-images
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    permissions:
+      contents: read
+      packages: read
+      security-events: write
 
     steps:
       - name: Run Trivy vulnerability scanner
