fix docker build

--- a/apps/server/Dockerfile
+++ b/apps/server/Dockerfile
@@ -30,7 +30,7 @@ COPY --from=builder /app/out/full/ .
 RUN npm run generate --filter=@repo/db
 # Build the server with Docker-specific config
 WORKDIR /app/apps/server
-RUN npx tsc -p tsconfig.docker.json
+RUN npx tsc
 
 # Runtime stage - minimal production image
 FROM base AS runner
@@ -38,15 +38,15 @@ WORKDIR /app
 
 # Install runtime dependencies
 RUN apk add --no-cache \
-    bash \
-    git \
-    openssh-client \
-    curl \
-    && rm -rf /var/cache/apk/*
+  bash \
+  git \
+  openssh-client \
+  curl \
+  && rm -rf /var/cache/apk/*
 
 # Create non-root user
 RUN addgroup -g 1001 server && \
-    adduser -D -u 1001 -G server server
+  adduser -D -u 1001 -G server server
 
 # Copy built application and dependencies
 COPY --from=installer --chown=server:server /app/apps/server/dist ./apps/server/dist
@@ -59,14 +59,14 @@ USER server
 
 # Environment variables
 ENV NODE_ENV=production
-ENV PORT=3001
+ENV PORT=4000
 
 # Expose port
-EXPOSE 3001
+EXPOSE 4000
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:3001/health || exit 1
+  CMD curl -f http://localhost:4000/health || exit 1
 
 # Start the server
 CMD ["node", "apps/server/dist/server.js"]
