--- a/apps/sidecar/package.json
+++ b/apps/sidecar/package.json
@@ -14,13 +14,14 @@
   },
   "dependencies": {
     "@repo/command-security": "*",
-    "@repo/types": "*",
     "@repo/db": "*",
+    "@repo/types": "*",
+    "@types/express-rate-limit": "^5.1.3",
     "compression": "^1.7.5",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
-    "express-rate-limit": "^7.4.1",
+    "express-rate-limit": "^7.5.1",
     "helmet": "^8.0.0",
     "socket.io-client": "^4.7.2",
     "winston": "^3.17.0",
