--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -36,6 +36,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
     "marked": "^16.1.1",
+    "nanoid": "^5.1.5",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
