start prod script, readme update, and gitignore firecracker env

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "docker:down": "docker-compose down",
     "docker:logs": "docker-compose logs -f",
     "docker:server": "docker build -f apps/server/Dockerfile -t shadow-server .",
-    "docker:sidecar": "docker build -f apps/sidecar/Dockerfile -t shadow-sidecar ."
+    "docker:sidecar": "docker build -f apps/sidecar/Dockerfile -t shadow-sidecar .",
+    "start:prod": "source firecracker-cluster-config.env && AGENT_MODE=firecracker NODE_ENV=production npm run --workspace=apps/server dev"
   },
   "prisma": {
     "schema": "packages/db/prisma/schema.prisma"
