--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "docker:logs": "docker-compose logs -f",
     "docker:server": "docker build -f apps/server/Dockerfile -t shadow-server .",
     "docker:sidecar": "docker build -f apps/sidecar/Dockerfile -t shadow-sidecar .",
-    "start:prod": "source firecracker-cluster-config.env && AGENT_MODE=firecracker NODE_ENV=production npm run --workspace=apps/server dev"
+    "start:prod": "npm run build && source firecracker-cluster-config.env && AGENT_MODE=firecracker NODE_ENV=production npm run --workspace=apps/server start"
   },
   "prisma": {
     "schema": "packages/db/prisma/schema.prisma"
