--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -2,13 +2,14 @@
   "name": "@repo/types",
   "version": "0.0.0",
   "private": true,
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
-    ".": "./src/index.ts",
-    "./*": "./src/*.ts"
+    ".": "./dist/index.js",
+    "./*": "./dist/*.js"
   },
   "scripts": {
+    "build": "tsc",
     "lint": "eslint 'src/**/*.ts'",
     "check-types": "tsc --noEmit"
   },
